--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,9 @@
 .home {
 
   .intro {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 
     h2 {
       padding: 15px;
@@ -11,7 +14,17 @@
     p {
       padding:0 15px;
     }
-  
+
+    .main-header{
+      width: 100%;
+      display: flex;
+      border-radius: 5px;
+
+        img {
+          width: 100%;
+          border-radius: 5px;
+        }
+    }
   }
 
   .space-images {
@@ -19,23 +32,89 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @phone {
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
     }
+
+    .blast{
+      @media @phone {
+          display: none;
+      }
+    }
+
+    .sky{
+        @media @phone {
+          display: none;
+        }
+      
+      
+    }
+
+    
+    .launch{
+      @media @phone {
+        display: flex;
+      }
+    
+    
+  }
   }
 
   .visit-planets {
     padding: 15px;
 
+    @media @phone {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      
+
+      }
+
     h3 {
       margin-top: 11px;
+
+      @media @phone {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     p {
       margin-top: 13px;
+
+      @media @phone {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
     }
   }
 
@@ -46,8 +125,27 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        order: 2;
+      
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,17 +156,56 @@
       }
 
       .btn {
+
+      
+        .btn-mixin (black, 80%, 15%, 5px, white);
+
+
+        @media @phone {
+
+          .btn-mixin (blue, 100%, 50%, 5px, white);
+          margin: 0 20px 0 20px;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+        }
+
+        &:hover {
+          background-color: lighten (teal);
+        }
+          
       }
+
+      
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        order: 1;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+        }
       }
     }
   }
