--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,17 @@
 // Import your less files here:
 
+// Vars & Mixins
+@import "variables";
+@import "mixins";
+
+// Global Styles
+@import "reset";
+@import "global";
+
+// Components
+@import "navigation";
+@import "footer";
+@import "home-page";
 
 
 
