--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 
 .top-navigation{
     width: 100%;
-    background-color: @waterloo;
+    background-color: @wild-sand;
     display: flex;
     flex-direction: column;
     align-items: center;
