--- a/css/index.css
+++ b/css/index.css
@@ -348,17 +348,19 @@ footer {
   height: 15%;
   font-size: 2rem;
   border-radius: 5px;
+  cursor: pointer;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
-    background-color: #22283A;
+    background-color: black;
     color: white;
     margin: 20px;
     width: 100%;
     height: 50%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border-radius: 5px;
     margin: 0 20px 0 20px;
+    padding: 10px 0 20px 0;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -366,7 +368,7 @@ footer {
   }
 }
 .home .walk .walk-text .btn:hover {
-  background-color: lighten #22283A;
+  background-color: #737373;
 }
 .home .walk .walk-img {
   width: 46%;
