--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,205 +1,112 @@
-// Home Content
+  // Home Content
 
-.home {
+  .home {
 
-  .intro {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-
-    h2 {
-      padding: 15px;
-    }
-
-    p {
-      padding:0 15px;
-    }
-
-    .main-header{
-      width: 100%;
+    .intro {
       display: flex;
-      border-radius: 5px;
-
-        img {
-          width: 100%;
-          border-radius: 5px;
-        }
-    }
-  }
-
-  .space-images {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-
-    @media @phone {
+      flex-wrap: wrap;
       width: 100%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-    }
 
-    img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
-
-      @media @phone {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-
-    .blast{
-      @media @phone {
-          display: none;
-      }
-    }
-
-    .sky{
-        @media @phone {
-          display: none;
-        }
-      
-      
-    }
-
-    
-    .launch{
-      @media @phone {
-        display: flex;
-      }
-    
-    
-  }
-  }
-
-  .visit-planets {
-    padding: 15px;
-
-    @media @phone {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      
-
-      }
-
-    h3 {
-      margin-top: 11px;
-
-      @media @phone {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-
-    p {
-      margin-top: 13px;
-
-      @media @phone {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  }
-
-  .walk {
-    margin-top: 60px;
-    border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
-    display: flex;
-    justify-content: center;
-
-    @media @phone {
-      width: 100%;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .walk-text {
-      width: 50%;
-
-      @media @phone {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        order: 2;
-      
-      }
-
-      h3 {
-        margin-bottom: 10px;
+      h2 {
+        padding: 15px;
       }
 
       p {
-        margin-bottom: 26px;
+        padding:0 15px;
       }
 
-      .btn {
+      .main-header{
+        width: 100%;
+        display: flex;
+        border-radius: 5px;
 
-      
-        .btn-mixin (black, 80%, 15%, 5px, white);
+          img {
+            width: 100%;
+            border-radius: 5px;
+          }
+      }
+    }
 
+    .space-images {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+
+      @media @phone {
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      img {
+        width: 28%;
+        margin: 20px 2.5%;
+        border-radius: 20px;
+        height: 100%;
 
         @media @phone {
-
-          .btn-mixin (@btn-bg-color, 100%, 50%, 5px, white);
-          margin: 0 20px 0 20px;
+          width: 100%;
           display: flex;
           justify-content: center;
           flex-direction: column;
           align-items: center;
         }
+      }
 
-        &:hover {
-         
-         
-          background-color: lighten (@btn-bg-color)
+      .blast{
+        @media @phone {
+            display: none;
         }
-          
+      }
+
+      .sky{
+          @media @phone {
+            display: none;
+          }
+        
+        
       }
 
       
+      .launch{
+        @media @phone {
+          display: flex;
+        }
+      
+      
+    }
     }
 
-    .walk-img {
-      width: 46%;
-      margin-left: 4%;
+    .visit-planets {
+      padding: 15px;
 
       @media @phone {
         width: 100%;
-        margin-bottom: 20px;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        order: 1;
+        
+
+        }
+
+      h3 {
+        margin-top: 11px;
+
+        @media @phone {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+        }
       }
-      
-      img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
+
+      p {
+        margin-top: 13px;
 
         @media @phone {
           width: 100%;
@@ -210,5 +117,98 @@
         }
       }
     }
-  }
-}// home
+
+    .walk {
+      margin-top: 60px;
+      border-top: 1px solid @main-border-color;
+      padding: 50px 60px;
+      display: flex;
+      justify-content: center;
+
+      @media @phone {
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .walk-text {
+        width: 50%;
+
+        @media @phone {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          order: 2;
+        
+        }
+
+        h3 {
+          margin-bottom: 10px;
+        }
+
+        p {
+          margin-bottom: 26px;
+        }
+
+        .btn {
+
+        
+          .btn-mixin (black, 80%, 15%, 5px, white);
+          cursor: pointer;
+
+          @media @phone {
+
+            .btn-mixin (black, 100%, 50%, 5px, white, 1.5rem);
+            margin: 0 20px 0 20px;
+            padding: 10px 0 20px 0;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+          }
+
+          &:hover {
+          
+            background-color: darken(grey, 5%)
+          }
+            
+        }
+
+        
+      }
+
+      .walk-img {
+        width: 46%;
+        margin-left: 4%;
+
+        @media @phone {
+          width: 100%;
+          margin-bottom: 20px;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          order: 1;
+        }
+        
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 10px;
+
+          @media @phone {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+          }
+        }
+      }
+    }
+  }// home
