--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 // Mixins Here
 
-.btn-mixin (@bg-color: black, @width: 80%, @height: 15%, @border-radius: 5px, @color: white) {
+.btn-mixin (@bg-color: black, @width: 80%, @height: 15%, @border-radius: 5px, @color: white, @fontsize:2rem) {
     
     display: flex;
     justify-content: center;
@@ -10,7 +10,7 @@
     margin: 20px;
     width: @width;
     height: @height;
-    font-size: 2rem;
+    font-size: @fontsize;
     border-radius: @border-radius;
   }
 
