minor color adj

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -158,12 +158,12 @@
         .btn {
 
         
-          .btn-mixin (black, 80%, 15%, 5px, white);
-          cursor: pointer;
+          .btn-mixin ();
+          
 
           @media @phone {
 
-            .btn-mixin (black, 100%, 50%, 5px, white, 1.5rem);
+            .btn-mixin (#22283A, 100%, 50%, 5px, white, 1.5rem);
             margin: 0 20px 0 20px;
             padding: 10px 0 20px 0;
             display: flex;
@@ -174,7 +174,7 @@
 
           &:hover {
           
-            background-color: darken(grey, 5%)
+            background-color: lighten(#22283A, 5%)
           }
             
         }
