--- a/css/index.css
+++ b/css/index.css
@@ -348,11 +348,10 @@ footer {
   height: 15%;
   font-size: 2rem;
   border-radius: 5px;
-  cursor: pointer;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
-    background-color: black;
+    background-color: #22283A;
     color: white;
     margin: 20px;
     width: 100%;
@@ -368,7 +367,7 @@ footer {
   }
 }
 .home .walk .walk-text .btn:hover {
-  background-color: #737373;
+  background-color: #2b334a;
 }
 .home .walk .walk-img {
   width: 46%;
